--- a/Notebook_Week_9.ipynb
+++ b/Notebook_Week_9.ipynb
@@ -105,7 +105,7 @@
     "2. Probability of obtaining the outcome 0 if Bob measures $\\rho$ and $Tr(N(\\rho))$ in the standard basis.\n",
     "3. Probability of obtaining the outcome 1 if Bob measures $\\rho$ and $Tr(N(\\rho))$ in the standard basis.\n",
     "\n",
-    "Apparently not much has happened right? Now, let us consider that a third party Eve holds a purification of $\\rho$. We denote the purification by $\\phi_{BE})$. That is, $\\rho=Tr_E(\\phi_{BE}$. Suppose for the sake of simplicity that Eve has a perfect memory, then after time $\\Delta t$ the joint state will be: $N\\otimes I (\\phi_{BE})$. What this means is that the noisy map will be applied to Bob's system $B$ and the identity map will be applied to Eve's system $E$. Explicitely, this map acts as:\n",
+    "Apparently not much has happened right? Now, let us consider that a third party Eve holds a purification of $\\rho$. We denote the purification by $\\phi_{BE}$. That is, $\\rho=Tr_E(\\phi_{BE})$. Suppose for the sake of simplicity that Eve has a perfect memory, then after time $\\Delta t$ the joint state will be: $N\\otimes I (\\phi_{BE})$. What this means is that the noisy map will be applied to Bob's system $B$ and the identity map will be applied to Eve's system $E$. Explicitely, this map acts as:\n",
     "\n",
     "$$N\\otimes I(\\mid i\\rangle\\langle j\\mid\\otimes\\mid k\\rangle\\langle l\\mid)=\\mid j\\rangle\\langle i\\mid\\otimes\\mid k\\rangle\\langle l\\mid$$\n",
     "\n",
