--- a/Notebook_Week_9.ipynb
+++ b/Notebook_Week_9.ipynb
@@ -29,11 +29,11 @@
     "<a id=Dist></a>\n",
     "<h2 style=\"color:#00A6D6;\">Properties of physical noise processes</h2>\n",
     "\n",
-    "The first question that we are going to address is what properties a valid noise process neeeds to verify. \n",
+    "The first question that we are going to address is what properties a valid noise process needs to verify. \n",
     "\n",
     "Do you remember the protocol that we have studied this week for oblivious transfer in the noisy storage model? Just in case we reproduce it.\n",
     "\n",
-    "Protocol for 1-2 OT in the noisy-storage model. Alice has inputs $s_0, s_1 \\in \\{0,1\\}^{\\ell}$, Bob has input $y \\in \\{0,1\\}$. \n",
+    "**Protocol for 1-2 OT in the noisy-storage model.** Alice has inputs $s_0, s_1 \\in \\{0,1\\}^{\\ell}$, Bob has input $y \\in \\{0,1\\}$. \n",
     "1. Alice chooses a random string $x = x_1,\\ldots,x_n \\in \\{0,1\\}^n$ and random basis $\\theta = \\theta_1,\\ldots,\\theta_n \\in \\{0,1\\}^n$. She sends the bits encoded in the randomly chosen BB84 bases $H^{\\theta_1} \\mid x_1\\rangle \\otimes \\ldots \\otimes H^{\\theta_n} \\mid x_n\\rangle$ to Bob. \n",
     "2. If $y=0$, then Bob measures all of the qubits in the standard basis. If $y = 1$, he measures in the Hadamard basis. He records the resulting outcome string $\\tilde{x} = \\tilde{x}_1,\\ldots,\\tilde{x}_n$. \n",
     "3. Both parties wait time $\\Delta t$. (**Storage assumption is applied!**)\n",
@@ -43,7 +43,7 @@
     "7. Alice sends to Bob $m_0 = s_0 \\oplus k_0$ and $m_1 = s_1 \\oplus k_1$, where $\\oplus$ denotes the bit wise xor.\n",
     "8. Bob computes $k = Ext(x_{\\mathcal{I}},r_y)$ and $s_y = k_y \\oplus r_y$.\n",
     "    \n",
-    "Bob wants to cheat. In step 2, he receives Alice's bits encoded in the BB84 bases. Instead of measuring this states, he decides to wait until step 4 when Alice will send him the list of encoding bases. \n",
+    "**Say Bob wants to cheat**. In step 2, he receives Alice's bits encoded in the BB84 bases. Instead of measuring this states, he decides to wait until step 4 when Alice will send him the list of encoding bases. \n",
     "\n",
     "Let us call $\\rho$ the state that Bob receives from Alice (which might consist of many qubits). In step 2, he places carefully $\\rho$ in a quantum memory. He waits a time $\\Delta t$. If he still had $\\rho$ after waiting $\\Delta t$ he would be able to recover all of Alice's bits, however, since his memory is noisy after this time, the state in the memory will not be $\\rho$ anymore, it will be some noisy version of $\\rho$ that we denote by $N(\\rho)$."
    ]
@@ -66,7 +66,9 @@
     "Do you think, that this is a valid map? Let us investigate it! Compute:\n",
     "\n",
     "4. $Tr(N(\\rho))$, where $Tr(\\cdot)$ is the trace function.\n",
+    "\n",
     "5. Probability of obtaining the outcome 0 if Bob measures $N(\\rho)$ in the standard basis.\n",
+    "\n",
     "6. Probability of obtaining the outcome 1 if Bob measures $N(\\rho)$ in the standard basis.\n",
     "\n",
     "Now compare the results of questions 1-3 and 4-6, what do you conclude?"
@@ -97,7 +99,7 @@
     "\n",
     "$$T(\\mid i\\rangle\\langle j\\mid)=\\mid j\\rangle\\langle i\\mid \\ .$$ \n",
     "\n",
-    "We already discussed this map in the notebook of week 2, you might want to take a look at the notebook again to familiarize with its properties.\n",
+    "We already discussed this map in the notebook of week 2, you might want to take a look at the notebook again to familiarize yourself with its properties.\n",
     "\n",
     "Compute:\n",
     "\n",
@@ -110,7 +112,7 @@
     "$$N\\otimes I(\\mid i\\rangle\\langle j\\mid\\otimes\\mid k\\rangle\\langle l\\mid)=\\mid j\\rangle\\langle i\\mid\\otimes\\mid k\\rangle\\langle l\\mid$$\n",
     "\n",
     "4. What are the eigenvalues of $N\\otimes I (\\phi_{BE})$?\n",
-    "5. Suppose that $N\\otimes I$ was a valid noise process. Then, if we measured the state $N\\otimes I (\\phi_{BE})$ in its eigenbasis, what would be the probabilities of each possible outcome from greatest to smallest?\n",
+    "5. Suppose that $N\\otimes I$ was a valid noise process. Then, if we measured the state $N\\otimes I (\\phi_{BE})$ in its eigenbasis, what would be the probabilities of each possible outcome from greatest to smallest? Recall that the \"probability\" of observing outcome $i$ is $p_i=Tr(\\mid v_i\\rangle\\langle v_i\\mid\\rho)$ where $\\mid v_i\\rangle\\langle v_i\\mid$ is the projector onto the $i$-th eigenvector.\n",
     "\n",
     "What do you conclude of this noise process?"
    ]
@@ -132,7 +134,7 @@
    "source": [
     "<h2 style=\"color:#00A6D6;\"> Some common noise models</h2>\n",
     "\n",
-    "Mathematically, any valid physical noise can be modelled by what is called a trace preserving and completely positive map. You can learn more about these maps for instance in the book of Nielsen and Chuang. As you guessed, the maps in the previous two exercises are not valid noise processes and, in consequence, they are not trace preserving and completely positive. Now, let us recall two very physical and valid types of noise: depolarizing and dephasing. They are given by the following maps:\n",
+    "Mathematically, any valid physical noise can be modelled by what is called a trace preserving and completely positive map. You can learn more about these maps for instance in the book of Nielsen and Chuang. As you guessed, the maps in the previous two exercises are not valid noise processes. This is because they are not trace preserving and completely positive. Now, let us recall two very physical and valid types of noise: depolarizing and dephasing. They are given by the following maps:\n",
     "\n",
     "$$\n",
     "\\mbox{Dephasing noise: }\\qquad Dephase_p(\\rho) = (1-p)\\ \\rho + p\\ X \\rho X\\ \n",
@@ -142,7 +144,9 @@
     "\n",
     "$$\n",
     "\\mbox{Depolarizing noise: }\\qquad Depol_p(\\rho) = (1-p)\\ \\rho + p\\ \\frac{\\mathbb{I}}{2}\n",
-    "$$"
+    "$$\n",
+    "\n",
+    "for $p\\in[0,1]$."
    ]
   },
   {
@@ -157,7 +161,7 @@
     "\n",
     "5'. Bob guesses the value of each of Alice's bits.\n",
     "\n",
-    "Suppose that $p=0.1$ and Alice encoded her bit in the hadamard basis. Compute:\n",
+    "Suppose that $p=0.1$ and Alice encoded her bit in the Hadamard basis. Compute:\n",
     "\n",
     "1. The probability that Bob guesses Alice's bit with depolarizing noise.\n",
     "2. The probability that Bob guesses Alice's bit with dephasing noise.\n",
